[package]
name = "yb_stats"
version = "0.8.1"
edition = "2021"
license = "apache-2.0"
description = "A utility to read all available data that should be available in a standard YugabyteDB cluster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
port_scanner = "0.1.5"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
reqwest = { version = "0.11.10", features = ["blocking"] }
itertools = "0.10.3"
regex = "1.5.5"
substring = "1.4.5"
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
rayon = "1.5.1"
scraper = "0.12.0"
dotenv = "0.15.0"
prometheus-parse = "0.2.2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/yb_stats", dest = "/usr/local/bin/yb_stats", mode="0755" }
]
release = "1.el8"