[package]
name = "yb_stats"
version = "0.8.9"
edition = "2021"
license = "apache-2.0"
description = "A utility to read all available metadata that should be present in a standard YugabyteDB cluster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
port_scanner = "0.1.5"
serde = "1.0.148"
serde_json = "1.0.89"
serde_derive = "1.0.148"
reqwest = { version = "0.11.13", features = ["blocking"] }
itertools = "0.10.5"
regex = "1.7.0"
substring = "1.4.5"
csv = "1.1.6"
chrono = { version = "0.4.23", features = ["serde"] }
rayon = "1.6.0"
scraper = "0.13.0"
dotenv = "0.15.0"
prometheus-parse = "0.2.3"
log = "0.4.17"
env_logger = "0.10.0"
colored = "2.0.0"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
#anyhow = "1.0.66"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/yb_stats", dest = "/usr/local/bin/yb_stats", mode="0755" }
]
release = "1.el8"
